test/files/neg/bug412.check
bug412.scala:9: error: type mismatch;
 found   : scala.Null(null)
 required: A.this.CX with A.this.C2
    val c: CX with C2 = null;
                        ^
one error found
